# vcc

./: .gitignore  CHUNKED_SYSTEM_GUIDE.md  CONDITIONING_IMPROVEMENTS.md  README.md  README_TRAIN.md  VAE_PERTURBATION_INJECTION.md  VAE_README.md  agREADME.md  analyze_hepg2_results.py  benchmark_flexible_vae.py  cleanup_legacy.py  data_down.py  dataset.py  delta_tokenizer.py  download.py  eval.py  eval.txt  eval2.py  evaluate.py  example_flexible_vae.py  example_perturbation_injection.py  example_vae.py  example_vae_clean.py  explore_vcc_data.py  gene_name_to_id.csv  hepg2_simple_experiment.py  hepg2_vae_experiment.py  hopper.sh  hvg_seuratv3_2000.txt  hvg_seuratv3_3000.txt  inference_flexible_vae.py  inference_vae.py  install_fp8.sh  legacy_compat.py  model_17b.py  monitor_experiment.py  preprocess_hvgs.py  pylock.toml  pyproject.toml  quick_results.py  (+31 more)
config/: VAE_ctrl_data_processing.json  VAE_data_H1_minus_24targets.json  chunked_data_config.json  mini_test_config.json  production_config.json  sample_genes.txt  test_config.json  training_config.json  vcc_data_config.json
configs/: e.yml  example_scrna_vcc.yml  experimental_large.yaml  ft.yml  phase1_config.yaml  phase2_config.yaml  vcc.yml
dataset/: __init__.py  collators.py  download.py  download_vcc.py  flexible_dataloader.py  orion_paired.py  scrna_hvg_dataset.py  umi_loader.py  vae_paired_dataloader.py  vcc_collator.py  vcc_dataloader.py  vcc_paired_dataloader.py
docs/: ESM2_INTEGRATION_README.md  cross_dataset_hvgs.md  dataset_description.md  test_results.md  train_transformer.py
engine/: agc.py  losses.py  (+3 more)
(+122 files in other folders)
