[project]
name = "vcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata==0.11.4",
    "h5py==3.14.0",
    "ipywidgets==8.1.7",
    "joblib==1.5.1",
    "jupyter==1.1.1",
    "lightning==2.5.2",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "scanpy==1.11.4",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "tables==3.10.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "tqdm==4.67.1",
    "typing==3.10.0.0",
    "umap-learn==0.5.9.post2",
    "wandb>=0.21.0",
    "xgboost==3.0.3",
]
